Finished the package move to dynamite and got the DYN core compiling on android. Bumped TeamCode to java 17 (which allows the kind of switch cases DYN relies on), removed some non-android libs, deprecated FileReader (will re-write later). DynAuto is de-activated because I still have to make the integration interface for this repo.